[package]
name = "geolocator"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "github.com/no-one-important/"
description = "A tool to geolocate IP addresses"
homepage = "https://github.com/No-one-important/geolocator"
repository = "https://github.com/No-one-important/geolocator"
keywords = ["geolocation", "ip", "address", "geolocator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipgeolocate = "0.3.5"
tokio = { version = "1.19.0", features = ["full"] }